# github-profile-explorer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/cli/: app.rs  mod.rs  ui.rs
tests/: integration_test.rs
