[package]
name = "github-profile-explorer"
version = "2.0.1"
edition = "2021"

[[bin]]
name = "gpe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.0"
unicode-width = "0.1.5"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12.1"
textwrap = "0.12.0"
